--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-    
+    <h1> Welcome to my website! </h1>
   <meta charset="utf-8">
     
     <title>HomePage</title>
@@ -9,7 +9,8 @@
   </head>
   
   <body>
-    <h1> Welcome to my Website! </h1>
+    <h2> About me: </h2>
+    <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
   </body>
   
 </html>
