--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   
   <head>
-    
-    <h1> Welcome to my website! </h1>
+    <link rel= "https://camhaaland.github.io/cs.portfolio/" href="style.css">
+          <h1> Welcome to my website! </h1>
   <meta charset="utf-8">
     
     <title>HomePage</title>
