--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-    <link rel= "https://camhaaland.github.io/cs.portfolio/" href="style.css">
+    <link rel="stylesheet" href="
           <h1> Welcome to my website! </h1>
   <meta charset="utf-8">
     
