--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-    <link rel="stylesheet" href="
+    <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css">
           <h1> Welcome to my website! </h1>
   <meta charset="utf-8">
     
