--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,17 @@
+<html>
+  
+  <head>
+          <h1> My hobbies </h1>
+  <meta charset="utf-8">
+    
+    <title>HomePage</title>
+    
+  </head>
+  
+  <body>
+    <h2> My hobbies: </h2>
+    <h3> My hobbies are mostly playing basketball and baseball. For baseball I am on the A team and for basketball I am on C. My basketball team is really good and I am our teams main shooter. </h3>
+  </body>
+  
+</html>
 
