--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,18 @@
+<html>
+  
+  <head>
+          <h1> Projects </h1>
+  <meta charset="utf-8">
+    
+    <title>HomePage</title>
+    
+  </head>
+  
+  <body>
+    <h2> Hello world </h2>
+   
+  </body>
+  
+</html>
+
 
