--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
    <li> <a href= "https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies></a> </li>
     <li> <a href= "https://camhaaland.github.io/cs.portfolio/contact.html">contact></a> </li>
+     <li> <a href= "https://camhaaland.github.io/cs.portfolio/projects.html">projects></a> </li>
       <h2> About me: </h2>
     <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
   </body>
