--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li.dropdown {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
+      <a href="hobbies.html">Hobbies</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
     </div>
