--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ li.dropdown {
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
       <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Contact Me</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
     </div>
   </li>
 </ul>
@@ -77,9 +77,6 @@ li.dropdown {
   </head>
   
   <body>
-   <li> <a href= "https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies></a> </li>
-    <li> <a href= "https://camhaaland.github.io/cs.portfolio/contact.html">contact></a> </li>
-     <li> <a href= "https://camhaaland.github.io/cs.portfolio/projects.html">projects></a> </li>
       <h2> About me: </h2>
         <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
   </body>
