--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ html>
   <meta charset="utf-8">
     
     <title>Contact</title>
-    
+    <a href="https://camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
   </head>
 
   <body>
