--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
     
     <title>HomePage</title>
-    
+     <a href="https://camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
   </head>
   
   <body>
