--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li.dropdown {
   <body>
       <h2> About me: </h2>
         <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
- <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj729P0oqTSAhWpx4MKHUVwCd4QjRwIBw&url=http%3A%2F%2Fwww.gcflearnfree.org%2Fcomputerbasics%2Fwhat-is-a-computer%2F1%2F&psig=AFQjCNHz9ZG5spUbnP_SxVxplsXZYfHmrg&ust=1487872437638873
+ <img src="https://media.gcflearnfree.org/content/55e0730c7dd48174331f5164_01_17_2014/desktop_mac_full_view_alt.jpg
   </body>
   
 </html>
