--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li.dropdown {
   <body>
       <h2> About me: </h2>
         <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
- <img src="https://media.gcflearnfree.org/content/55e0730c7dd48174331f5164_01_17_2014/desktop_mac_full_view_alt.jpg
+ <img src="https://media.gcflearnfree.org/content/55e0730c7dd48174331f5164_01_17_2014/desktop_mac_full_view_alt.jpg">
   </body>
   
 </html>
