--- a/hobbies.html
+++ b/hobbies.html
@@ -12,6 +12,7 @@
   <body>
     <h2> hobbies: </h2>
     <h3> My hobbies are mostly playing basketball and baseball. For baseball I am on the A team and for basketball I am on C. My basketball team is really good and I am our teams main shooter. </h3>
+    <img src="http://lunastitches.com/images/large/Basketballbaseball4in.jpg>
   </body>
   
 </html>
