--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li.dropdown {
   <body>
       <h2> About me: </h2>
         <h3> My name is Cam Haaland and I am 14 years old. This website will include information about me and will hold my projects in Computer Science. </h3>
-
+img src="https://lh3.googleusercontent.com/AUyHPcAOv-1cmXprT7XObPOvh8HUUtDhJ0PJw3aNKl3JJwbDhWW1C1y68iG1WN4MFYT00O7pW0Ns7628daOAdTqVuaUurANK2I8T2RfLbwd1_GXyWJSF5TrMaU9tb8DMJBp25VUHoPhOI41vNm4H476qKrcgozyuVY9DsUbqOgDsW0UqllX3kFpHJC-B8BgKc6kH8B9ETtdZe4jT5jIIAUkldjPkYhf9rananpwz-KT2_ILzTPz80fc8UMSZkkNsqo9RYZo5d1nF7I8U3t-lAyeBcz_J1XVdO8BwHQHI1dNjQVXNxdSVjSlydRhIyvQBTN6C9aEVSeuAUx72nOuzPwKAdDUDdhyK_ujq2Wjsh30cVF2g2Mdy2mh0utwkejO2HB9Oj9a_6PqN9C50kKyd7DcxHmFOeypcXCvkdfovKGcd1UVLZHLJcWAvh4CIEnshOWyi2YroViihBVfIUHbFQ3V-0oybact7HZrMofQt5mO99C688SPK0mns5wSxqkFnfjIJgM8-g66gVAmNDfNvpNcPCX1jx63KMsUu6rToZwYlFAQBw0qfqwoxOCW4pYfXHaPvDR5pNarRkDxbH2KlzaRcE71R03hAx5xPjTzLeuiz__CuEhBK=w1059-h794-no">
   </body>
   
 </html>
