--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
   <body>
     <h2> hobbies: </h2>
     <h3> My hobbies are mostly playing basketball and baseball. For baseball I am on the A team and for basketball I am on C. My basketball team is really good and I am our teams main shooter. </h3>
-    <img src="https://photos.google.com/share/AF1QipN-yZCy1SlMCD7hS3Rli-pG4MMTaA4gvXo9Rb6i_vOn6NcONEke1MEqX6Clkn0gpA/photo/AF1QipPhgK54c4opqM5Vg1OXrHPAB8v1P6g2OWNhJiWp?key=d3ppbnJ6Zjc2S0Y1cGNUVjZFUTlwVjVBb0FrQ0Zn">
+    <img src="https://lh3.googleusercontent.com/oo936EeGwvKBp6rc8VbdZSw_owdjV8v_CTeigU9P8-vOrJ8Ok66H6GqWYFjKy-F30h2R4naGYVllmq5RaqEywjkSf-sEh8eD9gdRM9NjOHxN-ynrDGmdIhIikyB8YSz-5V1KLY1YWUIrbWgHCnlQjxBpbGuDpoo2xCKIW_hSOz2OAUIOpjFb9EHHia3SGPqxwAN80Dh1OhUEC7NxeoOHmGt2rpwOstyQ3HO0V-IwpkAaNLW9KrDhn3Kl67QPCjvdCHCBLSXniUf7NRuS7x0PuzAyOJRG0rwG5zKESXc5X5NgH8WZIyVYsCDUqh-Pi93GI19QS4Kg8V1b8hBUfT-bK_ntGFMKtpkPtYBxvq_gi7Ta_bkH36qGPvczn6LIFh8VPtQgigHTuEq9ZBQ5bxpngxA224sAn8vXUuJR3EExiPveZg4Qgkfq-qWUFDI2tzMgkh8V9yH_0d7AfsayaJf4C8LrMgDKKdF-uM5ngG25323J9cGuNnRNH0Pp5ukH95Hb8WB7YoYpNumscP7q0KP271itK8kvDFJuY6s_Kp-XmfhPFKpzRTRyDfDjwAu9pFjfAMZVFwuiTH8I6-SUvLhWvK9ogJQu0kSNDRsEm1lJIXvRa_tDxSGAbA13sHweTqT-o3BOwe9w2iw3P2tHxlcKWgpy5cwBkAC3YyyMPorY6Q=w447-h794-no">
   </body>
   
 </html>
