--- a/hobbies.html
+++ b/hobbies.html
@@ -13,8 +13,8 @@
     <h2> hobbies: </h2>
     <h3> My hobbies are mostly playing basketball and baseball. For baseball I am on the A team and for basketball I am on C. My basketball team is really good and I am our teams main shooter. </h3>
     <img src="https://lh3.googleusercontent.com/oo936EeGwvKBp6rc8VbdZSw_owdjV8v_CTeigU9P8-vOrJ8Ok66H6GqWYFjKy-F30h2R4naGYVllmq5RaqEywjkSf-sEh8eD9gdRM9NjOHxN-ynrDGmdIhIikyB8YSz-5V1KLY1YWUIrbWgHCnlQjxBpbGuDpoo2xCKIW_hSOz2OAUIOpjFb9EHHia3SGPqxwAN80Dh1OhUEC7NxeoOHmGt2rpwOstyQ3HO0V-IwpkAaNLW9KrDhn3Kl67QPCjvdCHCBLSXniUf7NRuS7x0PuzAyOJRG0rwG5zKESXc5X5NgH8WZIyVYsCDUqh-Pi93GI19QS4Kg8V1b8hBUfT-bK_ntGFMKtpkPtYBxvq_gi7Ta_bkH36qGPvczn6LIFh8VPtQgigHTuEq9ZBQ5bxpngxA224sAn8vXUuJR3EExiPveZg4Qgkfq-qWUFDI2tzMgkh8V9yH_0d7AfsayaJf4C8LrMgDKKdF-uM5ngG25323J9cGuNnRNH0Pp5ukH95Hb8WB7YoYpNumscP7q0KP271itK8kvDFJuY6s_Kp-XmfhPFKpzRTRyDfDjwAu9pFjfAMZVFwuiTH8I6-SUvLhWvK9ogJQu0kSNDRsEm1lJIXvRa_tDxSGAbA13sHweTqT-o3BOwe9w2iw3P2tHxlcKWgpy5cwBkAC3YyyMPorY6Q=w447-h794-no">
-    <img scr="https://photos.google.com/share/AF1QipNtO3GAe1qgR_nOmhNHiQ2VunzjFEqQGrcAaEI5CtVAD5ET2KdpomWi1VqkRC3y8Q/photo/AF1QipM7iHZoiZQ5zZ2703NT_y68DtHYD3S3bvxe6sar?key=Wk5jbXR4M0llYXFnNUo2MnBTcFFvVDBqRjVzMG53">
-  </body>
+    <img scr="
+  </body>https://lh3.googleusercontent.com/voAJBSbfoUA9cRwK3xbXLYAvLXhxCEprh7AYR2sWUxjqV30-nZ0hIaU9wlGRz7Hl6w9uKtgO_9a_vcVI5p2bboR1a2QSCGae0SrOqhIyW2XqwPKTlnMYW6wI_jKMRAvhJnnq6S7ZshPwNdY8aItWdRWuu6QDH1PgKdE5x_nERaMyY_xxv9MRsQaepw7Sbf1Rw8F2mr6ma24N0HdOcLIaIbK_QL7ugPhiBsMV4sIZCAm1_9FIc15PyuU5QHAeMi3s4-MSWnsPoODD2PnLl0saDMsFr9BrYiNFHWV6vIThRp19pnGpZtlglbiOEtenYvi6wuvuc55aVL56MD6xOrOw2RRgzGC6SFFY5TBkGSdlKeWTcmFh4dYT6VEqM1gS7IeU54r8p5PKIBJlekI1URounuvblBHOLLVegbOi9wAg3E9pXYZMJzVQHAT4KaBun2nUTFEYc-weMTFecg3EuQnZRgyviqBx4n92pSz7e9oC6oYKU8ftPR2l8hW13UaPgeQY4v6g9pThS2ceze252S9hQfMekCR2xGUT3jRI0HMsYs_4GhrTbW9j2A4fy6xbz3kR971iuoHzwsYqeOtLK5ze75_n3UcIcdF5MX6fn9ywuQZeNiwo31uGbiIC3X_b5b0250DEd2tVIWvg0gh3GqjgMb9gtuxiNsMyuP9SbYlUyw=w595-h794-no">
   
 </html>
 
