--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li.dropdown {
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
       <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
-      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Contact Me</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
       <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
     </div>
   </li>
