--- a/hobbies.html
+++ b/hobbies.html
@@ -11,7 +11,7 @@
   
   <body>
     <h2> Hobbies: </h2>
-    <h3> My hobbies include playing baseball and basketball, school and classes, and exploring new places. For more information regarding my sports, visit the "Sports" page. For more information about visiting new places and my amazing vacations, visit the "Vacations" page. </h3>
+    <h3> My hobbies include playing baseball and basketball, school and classes, and exploring new places. <br> For more information regarding my sports, visit the "Sports" page. <br> For more information about visiting new places and my amazing vacations, visit the "Vacations" page. </h3>
       <h2> About me: </h2>
     <h3> As said on my home page, my name is Cam Haaland, and I am 14 years old at Minnetonka Middle School East. I moved here to Minnesota in second grade. Before I moved here, I lived in Portland, Oregon. My entire family lives there and I still go back 3 times per year. My family includes my mom, my dad, my brother Kieran, my dog Anju, and my cat Harley. I like it here in Minnesota, and I'm excited to go to high school at MHS. </h3>
   </body>
