--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,18 @@ html>
           
   <meta charset="utf-8">
     
-    <title>Contact</title>
+    <title>Sports</title>
     <a href="https://camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
   </head>
 
   <body>
-    <h2> Contact me: </h2>
-    <h3> phone number: 612-839-1017 <br> email: camhaaland@yahoo.com or 009568@mtka.org </h3>
+    <h1> Sports: </h1>
+    <h2> Basketball: </h2>
+    <h3> Regarding basketball, I play on the 8C team. We are one of the best teams in the state, and our record is 22-6. I am our teams main three-point shooter, and I average making about three threes per game. I really like basketball, and I hope to keep playing for as long as I can. </h3>
+    <img src="https://lh3.googleusercontent.com/BETEeTHPqRxzFGdG7Os1PH9o_tI2ZPCRHIaoFj9C_4pVtaHDKXkwyrhnWBKKvN4fJg_u5c8mKwrBJEdgIXUdD45fZkBkk6wVIJYCE5F4acuiXly2C9Ly9zwxGGQOVmRv_4PUD_u9HAZqsvSBKeOkg7Eh36QSKrvgnMJvl3GeRUkyO86fHZnuzb86_AF-nwAPbcZxNv-iwYX4C5Y6in_DbRC_i4CB1x6H3l9123UHM30fGmRghixcolICWLU2TuUDqsSYSQSFDG6P2WpeFHttYG7NyLeZ_zbYp-bKBEmbOyY7J_Hq5HqnE_EE5n_NZHMas1MVLOB0HvsDXuFyUB5MHNp4FXhU20ml3zjcyHXHffmFUppHJHw5nGFRqDqqLT0GH-bIhJGH5q8WFHQSjBotCZ4zJUMeCtlHW9GejilBiRVPq9M0ClTutMu2xm1s-NSlgucPq5TsBybaUaO8bFcdACjGVtVtnJCKwAgm0Og2GEwHRDSDZs63K7uvkSVthvZ2LG_RZHWsbqR0NBGw6imbRFEPDjTtyN7XhTAF5oSf7biUav4bUFjJbLY3R1cRVYgJJu69KS6Nwscz4efjMV94NVUMlc7ReyJBXCw-D0SvCCCZckJVYFKZ=w447-h794-no">
+    <h2> Baseball </h2>
+    <h3> For baseball, I play on the A team. I am a really good pitcher and can throw about 70 mph. My favorite pitch is the curveball, because I have practiced it a lot and it has gotten very good. I have only hit one home run over the fence in my career, but I hope to hit more sometime. I enjoy baseball almost as much as basketball, and I hope to play that as long as I can too. </h3>
+    <img src="https://lh3.googleusercontent.com/_5YT4VChAYKz6tOfG1TU0yMutELc-b1EEuMIRR4jtmhxa5k-_qbDjEVgXzBscrGCHGh5_-aqd6JswhiXIsgAdaJnitLiz2iJe6hjGMdMQj4zhMaTpMSL6Ae8adB9qf2A7shbwA5dnGM_IQ0atEubmRPihuqXLNq2IxNnE0V_0UVg1uPOQAgADdsWY9uSrmH14yvheMw3IUW29Dy72fH1dbKuN5iDa7DIAj5jEp3T98SoE3gglfPi0N1HHu5k4C_-2NwDnpdpSkorEZlPXq-_S7Ui3FoSDvT118NlqFuM-3ZWABf5bTGIKLBN5UXHFwVZ6pOwJytZFt0JxEzPfm_75Vsom8O9UheucHjruDPIyJLSa7rDfZPggqf_vxV90M6o0NtX6TQI1eP59LI2llpxe-fHlgWEllqdc73478FaZlS4NanFVQkFk5d2HOkIu0gzCk8lClJVWukjtkiggzCwLDjFIsf8X0lwoOhjvERJ-gzNhF9FlAQ3lE2X0JkFIlidZ2Dkd7dDpiUN4khyH47AttRHTgSmf8gSiHICUNZwKPBLbMPs3f74qPXr-w2Y3jyNGN3bURg_EYlv3nyHl_KQR79rCu7Dk2qSRE81Ml3nc05d7-odgLJB=w596-h794-no">
   </body>
   
 </html>
