--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ li.dropdown {
       <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
       <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
       <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
     </div>
   </li>
 </ul>
