--- a/vacations.html
+++ b/vacations.html
@@ -1,5 +1,9 @@
 <html>
-  
+  <style>
+    img{
+      float: right;
+    }
+  </style>
   <head>
      <a href="https://camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
           <h1> My Vacations </h1>
