--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <a> camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
+ <a href="https://camhaaland.github.io/cs.portfolio/index.html">Back to Home</a>
 <style>
 table {
     font-family: arial, sans-serif;
