--- a/projects.html
+++ b/projects.html
@@ -24,17 +24,17 @@ tr:nth-child(even) {
 
 <table>
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>Project Name</th>
+    <th> </th>
+    <th> </th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Hello World</td>
+    <td> </td>
+    <td> </td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
+    <td> </td>
     <td>Francisco Chang</td>
     <td>Mexico</td>
   </tr>
