--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,8 @@ tr:nth-child(even) {
 <table>
   <tr>
     <th>Project Name</th>
-    <th> </th>
-    <th> </th>
+    <th> Project Desription</th>
+    <th> Project Image </th>
   </tr>
   <tr>
     <td>Hello World</td>
@@ -35,28 +35,28 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td> </td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td> </td>
+    <td> </td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
+    <td> </td>
+    <td> </td>
+    <td></td>
   </tr>
   <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
+    <td> </td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
+    <td>  </td>
+    <td> </td>
+    <td></td>
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <td>  </td>
+    <td> </td>
+    <td></td>
   </tr>
 </table>
 
