--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@ tr:nth-child(even) {
 <table>
   <tr>
     <th>Project Name</th>
-    <th> Project Desription</th>
+    <th> Project Description</th>
     <th> Project Image </th>
   </tr>
   <tr>
@@ -34,7 +34,7 @@ tr:nth-child(even) {
     <td> </td>
   </tr>
   <tr>
-    <td> </td>
+    <td> This is the first repository that I created. </td>
     <td> </td>
     <td> </td>
   </tr>
