--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,18 @@ li.dropdown {
   </head>
 
   <body>
+    <ul>
+  <li><a href="#home">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">More</a>
+    <div class="dropdown-content">
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
+    </div>
+  </li>
+</ul>
     <h1> Sports: </h1>
     <h2> Basketball: </h2>
     <h3> Regarding basketball, I play on the 8C team. We are one of the best teams in the state, and our record is 22-6. I am our teams main three-point shooter, and I average making about three threes per game. I really like basketball, and I hope to keep playing for as long as I can. </h3>
