--- a/hobbies.html
+++ b/hobbies.html
@@ -54,6 +54,18 @@ li.dropdown {
   </head>
   
   <body>
+    <ul>
+  <li><a href="#home">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">More</a>
+    <div class="dropdown-content">
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
+    </div>
+  </li>
+</ul>
     <h2> Hobbies: </h2>
     <h3> My hobbies include playing baseball and basketball, school and classes, and exploring new places. <br> For more information regarding my sports, visit the "Sports" page. <br> For more information about visiting new places and my amazing vacations, visit the "Vacations" page. </h3>
       <h2> About me: </h2>
