--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,18 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
+    <ul>
+  <li><a href="#home">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">More</a>
+    <div class="dropdown-content">
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
+    </div>
+  </li>
+</ul>
 
 <table>
   <tr>
