--- a/vacations.html
+++ b/vacations.html
@@ -54,6 +54,18 @@ li.dropdown {
   </head>
   
   <body>
+   <ul>
+  <li><a href="#home">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">More</a>
+    <div class="dropdown-content">
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
+    </div>
+  </li>
+</ul>
     <h2> I have been on a lot of vacations, but I will share my favorites. </h2>
     <h3> My third favorite vacation was Mexico in 2016 spring break. We only went there for less than a week, but while we were there, it was paradise. We stayed in a hotel with a private beach, and we did a lot of snorkling there. Unfortunately, I had pneumonia while we were there, but it was still amazing. I will share two photos below, one from the beautiful Mayan Ruins of Tulum that we visited while there, and one of my family snorkling in a beautiful cave. </h3>
     <img src="https://lh3.googleusercontent.com/QWvkdUKlzlLN2YNaXl0F5FQ2YYa2IElky-zGQrghqmhh5tmS_DdHIEPIAQJT2MerkT0iZbv7BIk27-m2OuK4UTfdWqKY1y5ypRWYziGG7u_dsWi2q9YgyqP2cqQqRPoNgQvPpXX3veEbt1Hhlmzjv4GRIoWsHdtmTVUE2IhuA2go8sUWFAjwssWKDGCzM8HERzev3F-biikFJN8HQglofyP1xr0LFZOu0HzXgww8if3zHR6j-GPhUY-NYTCOzlT32ol9Rg2288bLNRORigoohW6JWS8Mf_pwzNe6rwhPBbhU7XrqCj7elZOGnbnBMZKDbNpQxjZrQmzlHpoFD739g7q7yx9yhgHGN_2PrW1IroXfWNtFV8iineBMn_4YGDEp9QupXCGBsq39obuYaDNFKYv21jxNxt1gSB4RDuGJNjcx_ilYlEOHI4BpeHL5RI0LVQ_mwJ7ojrfIY7qdMyX4Lp1JtQdsShb2OBSjACkMafWHqQaNzfwt6evKbOfSRKEvIi8r_ohZhkHsaNjH9jVgKcNXh7SO6IeIhuW_ELusn8I5MFai3Plmyrpe-Qaa8WJCGR3jRZhlTRckgT0BRCK8u3Np8DAocN75-Rp4Bxo4vXk2kVJ8=w1059-h794-no">
