--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@ tr:nth-child(even) {
 </head>
 <body>
     <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="https://camhaaland.github.io/cs.portfolio/index.html">Home</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
