--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ li.dropdown {
 
   <body>
     <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="https://camhaaland.github.io/cs.portfolio/index.html">Home</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
