--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,10 @@ li.dropdown {
   </head>
 
   <body>
+    <style>
+    body  { 
+        background-color:gray;
+      }
     <ul>
   <li><a href="https://camhaaland.github.io/cs.portfolio/index.html">Home</a></li>
   <li class="dropdown">
