--- a/hobbies.html
+++ b/hobbies.html
@@ -66,6 +66,7 @@ li.dropdown {
     </div>
   </li>
 </ul>
+     <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.hobbies">
       <h1> About Me and Hobbies </h1>
     <h2> Hobbies: </h2>
     <h3> My hobbies include playing baseball and basketball, school and classes, and exploring new places. <br> For more information regarding my sports, visit the "Sports" page. <br> For more information about visiting new places and my amazing vacations, visit the "Vacations" page. </h3>
