--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@ li.dropdown {
     </div>
   </li>
 </ul>
+      <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.sports">
     <h1> Sports: </h1>
     <h2> Basketball: </h2>
     <h3> Regarding basketball, I play on the 8C team. We are one of the best teams in the state, and our record is 22-6. I am our teams main three-point shooter, and I average making about three threes per game. I really like basketball, and I hope to keep playing for as long as I can. </h3>
