--- a/vacations.html
+++ b/vacations.html
@@ -66,6 +66,7 @@ li.dropdown {
     </div>
   </li>
 </ul>
+   <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.sports">
    <h1> My Vacations </h1>
     <h2> I have been on a lot of vacations, but I will share my favorites. </h2>
     <h3> My third favorite vacation was Mexico in 2016 spring break. We only went there for less than a week, but while we were there, it was paradise. We stayed in a hotel with a private beach, and we did a lot of snorkling there. Unfortunately, I had pneumonia while we were there, but it was still amazing. I will share two photos below, one from the beautiful Mayan Ruins of Tulum that we visited while there, and one of my family snorkling in a beautiful cave. </h3>
