--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,7 @@ tr:nth-child(even) {
     </div>
   </li>
 </ul>
+     <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.projects">
 
 <table>
   <tr>
