--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ li.dropdown {
     display: block;
 }
 </style>
+    <title> Home </title>
 </head>
 <body>
 
@@ -72,7 +73,7 @@ li.dropdown {
           <h1> Welcome to my website! </h1>
   <meta charset="utf-8">
     
-    <title>HomePage</title>
+
     
   </head>
   
