--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@ tr:nth-child(even) {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">More</a>
     <div class="dropdown-content">
-      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies/About</a>
       <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
       <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
       <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
