--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@ li.dropdown {
   <body>
       <h2> Who am I? </h2>
         <h3> My name is Cam H and I am 14 years old. This website includes information about me and holds my projects in Computer Science. </h3>
-<img src="homepage.jpg">  </body>
+<img src="homepage.JPG">  </body>
   
 </html>
