--- a/projects.html
+++ b/projects.html
@@ -92,9 +92,9 @@ tr:nth-child(even) {
     <td> </td>
   </tr>
   <tr>
-    <td>  </td>
-    <td> </td>
-    <td> </td>
+    <td> Skittles Data </td>
+    <td> First mini data collecion project </td>
+    <td> https://github.com/camhaaland/cs.portfolio/blob/master/SkittlesData.html </td>
   </tr>
   <tr>
     <td> </td>
