--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@ tr:nth-child(even) {
   <tr>
     <td> Skittles Data </td>
     <td> First mini data collecion project </td>
-    <td> https://github.com/camhaaland/cs.portfolio/blob/master/SkittlesData.html </td>
+    <td> <li><a href"SkittlesData.html">https://github.com/camhaaland/cs.portfolio/blob/master/SkittlesData.html</a></li></td>
   </tr>
   <tr>
     <td> </td>
