--- a/SkittlesData.html
+++ b/SkittlesData.html
@@ -5,7 +5,7 @@
  <title> Skittles Lab </title>
  <h1> Are all mini skittle packets created equally? </h1>
  <h3> Data Collection <h3>
- <img src="data.PNG" alt="Data" width="1000">
+ <img src="purple.PNG" alt="Data" width="1000">
  <img src="image.png" alt="Graph 1">
  <img src="skittle.PNG" alt="Graph 2">
  <img src="image (1).png" alt="Graph 3">
