--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@ tr:nth-child(even) {
   <tr>
     <td> Skittles Data </td>
     <td> First mini data collecion project </td>
-    <td> <li><a href> "Skittles data" https://camhaaland.github.io/cs.portfolio/SkittlesData.html</a></li></td>
+    <td> <li><a href> "https://camhaaland.github.io/cs.portfolio/SkittlesData.html"</a></li></td>
   </tr>
   <tr>
     <td> </td>
