--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -1,1 +1,100 @@
 
+<html>
+<head>
+ <style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+li {
+    float: left;
+}
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+li.dropdown {
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+</style>
+
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+    <title> Projects </title>
+</head>
+<body>
+    <ul>
+  <li><a href="https://camhaaland.github.io/cs.portfolio/index.html">Home</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">More</a>
+    <div class="dropdown-content">
+      <a href="https://camhaaland.github.io/cs.portfolio/hobbies.html">Hobbies/About</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/contact.html">Sports</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/projects.html">Projects</a>
+      <a href="https://camhaaland.github.io/cs.portfolio/vacations.html">Vacations</a>
+    </div>
+  </li>
+</ul>
+     <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.projects">
+
+ <link rel="stylesheet"href="https://camhaaland.github.io/cs.portfolio/style.css">
+ <title> Dogs and Roller Coastersw </title>
+ <h1> Which roller coasters are suitable for dogs to ride? </h1>
+ <h3> Data Collection <h3>
+ <img >
+ <img >
+ <img>
+ <img >
+  <h3> Data Process: <h3>
+   <p> 
+</p>
+ <h3> Data Analysis: <h3>
+  <p></p>
+ <h3> Conclusion: .<h3>
+  </head>
+ <body>
+ </body>
+ </html>
+ 
+
