--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -82,7 +82,7 @@ tr:nth-child(even) {
  <title> Dogs and Roller Coastersw </title>
  <h1> Which roller coasters are suitable for dogs to ride? </h1>
  <h3> Data Collection <h3>
- <img "gula.PNG">
+ <img src="gula.PNG">
  <img >
  <img>
  <img >
