--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -79,7 +79,7 @@ tr:nth-child(even) {
      <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.projects">
 
  <link rel="stylesheet"href="https://camhaaland.github.io/cs.portfolio/style.css">
- <title> Dogs and Roller Coastersw </title>
+ <title> Dogs and Roller Coasters </title>
  <h1> Which roller coasters are suitable for dogs to ride? </h1>
  <h3> Data Collection <h3>
  <img src="gula.PNG">
@@ -92,7 +92,6 @@ tr:nth-child(even) {
 
  <h3> Data Analysis: <h3>
   <p>Using tuvalabs, we found data on rollercoasters and dogs. We looked through the graphs and examined what the best attributes would be for the dogs and rollercoasters. We decided that for dogs they needed to be small in height (measured up to shoulders) and in weight, with good health and must always be friendly to strangers. For the roller coasters the important attributes are the height, speed and length. Then we collected our data and turned it into graphs.</p>
-Data analysis:
 <p>The most suitable rollercoaster for dogs is the Jr.Gemini, and the dog most suitable to ride it is the Bichon Frise. Jr.Gemini has a height of 5.7912 meters, a speed of 97.2 kilometers per hour and a length of 135.026 meters. The average height for the 5 roller coasters we examined was 24.4792 meters, the average speed was 60.324 kilometers per hour and the average length was 303.4972 meters. The Bichon Frise has a height of 11 inches, a weight of 12 pounds, fairly good health and is always friendly to strangers. Out of the 5 dogs, the average height was 12.8 inches, the average weight was 31.6 pounds, the average health was fairly good and they were all friendly to strangers.</p>
 
  <h3> Conclusion: .<h3>
