--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -61,7 +61,7 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 </style>
-    <title> Projects </title>
+    <title> Dogs and Roller Coasters </title>
 </head>
 <body>
     <ul>
