--- a/projects.html
+++ b/projects.html
@@ -97,9 +97,9 @@ tr:nth-child(even) {
     <td><li><a href="https://camhaaland.github.io/cs.portfolio/SkittlesData.html">Skittles Data</a></li></td>
   </tr>
   <tr>
-    <td> </td>
-    <td> </td>
-    <td></td>
+    <td> Dogs and Roller Coasters </td>
+    <td> Our larger scale data collection project. </td>
+    <td><li><a href="https://camhaaland.github.io/cs.portfolio/dogcoaster.html">Dogs and Roller Coasters</a></li>
   </tr>
   <tr>
     <td> </td>
