--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -83,7 +83,7 @@ tr:nth-child(even) {
  <h1> Which roller coasters are suitable for dogs to ride? </h1>
  <h3> Data Collection <h3>
  <img src="gula.PNG">
- <img >
+ <img src="rat.PNG">
  <img>
  <img >
   <h3> Data Process: <h3>
