--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -76,7 +76,7 @@ tr:nth-child(even) {
     </div>
   </li>
 </ul>
-     <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.projects">
+     <link rel="stylesheet" href="https://camhaaland.github.io/cs.portfolio/style.css.dogcoaster">
 
  <link rel="stylesheet"href="https://camhaaland.github.io/cs.portfolio/style.css">
  <title> Dogs and Roller Coasters </title>
