--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -88,7 +88,7 @@ tr:nth-child(even) {
   <h3> Data Process: <h3>
 <p>We chose 5 rollercoasters (Katapult, Shockwave, Jr. Gemini, Percy’s Railway and Aconcagua) and 5 dogs (Havanese, Irish Setter, Bulldog, Coton de Tulear and a Bichon Frise) to compare. Not all dogs will be allowed to ride the chosen roller coaster, just because they are unfit for any rollercoaster. The dogs needed to be small for the rides because that way they can't jump out, will be easier to control and get ride with their owner. Health is important too because if they have a health problem then rollercoasters may not benefit them. The rides needed to be short, slow and have a low height so that they aren’t too scary for the dogs.</p>
  <img src="gula.PNG">
- <img src=>
+ <img src="rat.PNG">
 
  
   <p>Using tuvalabs, we found data on rollercoasters and dogs. We looked through the graphs and examined what the best attributes would be for the dogs and rollercoasters. We decided that for dogs they needed to be small in height (measured up to shoulders) and in weight, with good health and must always be friendly to strangers. For the roller coasters the important attributes are the height, speed and length. Then we collected our data and turned it into graphs.</p>
