--- a/dogcoaster.html
+++ b/dogcoaster.html
@@ -86,7 +86,7 @@ tr:nth-child(even) {
 
  
   <h3> Data Process: <h3>
-<p>We chose 5 rollercoasters (Katapult, Shockwave, Jr. Gemini, Percy’s Railway and Aconcagua) and 5 dogs (Havanese, Irish Setter, Bulldog, Coton de Tulear and a Bichon Frise) to compare. Not all dogs will be allowed to ride the chosen roller coaster, just because they are unfit for any rollercoaster. The dogs needed to be small for the rides because that way they can't jump out, will be easier to control and get ride with their owner. Health is important too because if they have a health problem then rollercoasters may not benefit them. The rides needed to be short, slow and have a low height so that they aren’t too scary for the dogs.</p>
+<p>We chose 5 rollercoasters (Katapult, Shockwave, Jr. Gemini, Percy’s Railway and Aconcagua) and 5 dogs (Havanese, Irish Setter, Bulldog, Coton de Tulear and a Bichon Frise) to compare. Not all dogs will be allowed to ride the chosen roller coaster, just because they are unfit for any rollercoaster. The dogs needed to be small for the rides because that way they can't jump out, will be easier to control and get ride with their owner. The rides needed to be short, slow and have a low height so that they aren’t too scary for the dogs.</p>
  <img src="gula.PNG">
  <img src="cat.PNG">
 
