--- a/projects.html
+++ b/projects.html
@@ -102,9 +102,9 @@ tr:nth-child(even) {
     <td><li><a href="https://camhaaland.github.io/cs.portfolio/dogcoaster.html">Dogs and Roller Coasters</a></li>
   </tr>
   <tr>
-    <td> </td>
-    <td></td>
-    <td></td>
+    <td> Final Video Game Project </td>
+    <td> Hari and I created a game called pumpkin smash, link provided --></td>
+    <td> https://studio.code.org/projects/gamelab/LPt4D1jN8vm-esB63yfLnm1xZKqTqHqVOyMN15bUacA </td>
   </tr>
   <tr>
     <td>  </td>
