--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@ tr:nth-child(even) {
   <tr>
     <td> Final Video Game Project </td>
     <td> Hari and I created a game called pumpkin smash, link provided --></td>
-    <td> https://studio.code.org/projects/gamelab/LPt4D1jN8vm-esB63yfLnm1xZKqTqHqVOyMN15bUacA </td>
+    <td><li><a href="https://studio.code.org/projects/gamelab/LPt4D1jN8vm-esB63yfLnm1xZKqTqHqVOyMN15bUacA"> Our Game </a></li> </td>
   </tr>
   <tr>
     <td>  </td>
